arreglo del problema de admin y arreglo de la responsabilidad del navbar

--- a/src/app/modules/admin/components/table/table.component.html
+++ b/src/app/modules/admin/components/table/table.component.html
@@ -83,7 +83,7 @@
         <div class="mb-3">
           <div class="mb-3">
             <label class="form-label">Ingrese categoría del producto</label>
-            <select class="form-control" formControlName="categoria">
+            <select class="form-control" formControlName="Categoria">
               <option value="auriculares">auriculares</option>
               <option value="celulares">celulares</option>
               <option value="mouses">mouses</option>
@@ -102,7 +102,7 @@
                 (change)="cargarImagen($event)" <- ejecuta el evento de cargarImagen que 
                 definimos en el table.ts
               -->
-            <input type="file" accept="Imagen/*" (change)="cargarImagen($event)">
+            <input type="file" accept="imagen/*" (change)="cargarImagen($event)">
         </div>
           <!--ALT   -->
           <div class="mb-3">
