--- a/src/app/modules/autentificacion/pages/registro/registro.component.html
+++ b/src/app/modules/autentificacion/pages/registro/registro.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <h1>Registrate</h1>
 
-        <i class="material-icons" style="font-size: 200px;">person</i>
+        <i class="fa-solid fa-user"  style="font-size: 200px; color:#4758B8; padding: 15px;"></i>
         
         <!-- Nombre de usuario -->
         <mat-form-field appearance="fill">
