--- a/src/app/modules/producto/componentes/cards/cards.component.html
+++ b/src/app/modules/producto/componentes/cards/cards.component.html
@@ -21,7 +21,7 @@
 
             <div class="card-body">
                 <h5 class="card-title">{{producto.Nombre}}</h5>
-                <p class="card-text">{{producto.Precio}}</p>
+                <p class="card-text">{{producto.Precio}}$</p>
 
                 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalCard"
                     (click)="mostrarVer(producto)">
