--- a/src/app/modules/producto/pages/auriculares/auriculares.component.html
+++ b/src/app/modules/producto/pages/auriculares/auriculares.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
      
-      <h1>auriculares</h1>
+    <span class="title">Auriculares</span>
       <div class="col">
          <app-card-auriculares></app-card-auriculares>
       </div>
