--- a/src/app/modules/producto/pages/teclados/teclados.component.html
+++ b/src/app/modules/producto/pages/teclados/teclados.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
      
-      <h1>Teclados</h1>
+    <span class="title">Teclados</span>
       <div class="col">
          <app-card-teclados></app-card-teclados>
       </div>
