--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -9,7 +9,7 @@
       <div style="flex: 1; min-width: 200px; margin: 10px;">
         <h3>Contacto</h3>
         <p><i class="fas fa-phone-alt"></i> +1 234 567 890</p>
-        <p><i class="fas fa-map-marker-alt"></i> Calle Falsa 123, Ciudad, País</p>
+        <p><i class="fas fa-map-marker-alt"></i> Brandsen 805, C1161AAQ Cdad. Autónoma de Buenos Aires</p>
       </div>
       
       <!-- Redes Sociales -->
@@ -34,9 +34,9 @@
       <!-- Sucursales -->
       <div style="flex: 1; min-width: 200px; margin: 10px;">
         <h3>Sucursales</h3>
-        <p><i class="fas fa-store"></i> Sucursal 1: Calle 1, Ciudad A, País</p>
-        <p><i class="fas fa-store"></i> Sucursal 2: Calle 2, Ciudad B, País</p>
-        <p><i class="fas fa-store"></i> Sucursal 3: Calle 3, Ciudad C, País</p>
+        <p><i class="fas fa-store"></i> Brandsen 805, C1161AAQ Cdad. Autónoma de Buenos Aires</p>
+        <p><i class="fas fa-store"></i> 100 Universal City Plaza, Universal City, CA 91608, Estados Unidos</p>
+        <p><i class="fas fa-store"></i> Av. Dr. Ramón 355 Y Ruta N°7, Q8302 Neuquén</p>
       </div>
       
       <!-- Ubicación (Mapa) -->
@@ -48,6 +48,6 @@
         </div>
       </div>
     </div>
-    <p style="margin-top: 20px;">&copy; 2024 Kila Nara. Todos los derechos reservados.</p>
+    <p style="margin-top: 20px;">&copy; 2024 TechZone. Todos los derechos reservados.</p>
   </footer>
   
