--- a/src/app/modules/autentificacion/pages/iniciosesion/iniciosesion.component.html
+++ b/src/app/modules/autentificacion/pages/iniciosesion/iniciosesion.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
         <h1>Inicia Sesión</h1>
-
-        <i class="material-icons" style="font-size: 200px;">person</i>
+        
+        <i class="fa-solid fa-user"  style="font-size: 200px; color:#4758B8; padding: 15px;"></i>
 
         <mat-form-field appearance="fill">
             <mat-label>Ingrese su email:</mat-label>
