--- a/src/app/modules/autentificacion/pages/registro/registro.component.css
+++ b/src/app/modules/autentificacion/pages/registro/registro.component.css
@@ -9,3 +9,9 @@
     width: 120px;
     margin: auto;
 }
+h1{
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: rgb(156, 88, 43);
+}
