--- a/src/app/modules/producto/componentes/card-auriculares/card-auriculares.component.css
+++ b/src/app/modules/producto/componentes/card-auriculares/card-auriculares.component.css
@@ -29,3 +29,6 @@
   gap: 20px; /* Añade espacio uniforme entre las tarjetas */
   padding: 0 20px; /* Asegura que las tarjetas no se peguen a los bordes del contenedor */
 }
+
+
+/*filtro*/
