--- a/src/app/modules/producto/pages/auriculares/auriculares.component.css
+++ b/src/app/modules/producto/pages/auriculares/auriculares.component.css
@@ -63,11 +63,22 @@ img.mat-card-image {
 
 
 /*titulo*/
-h1{
+.title{
     display: flex;
     justify-content: center;
-    font-family: "Kanit", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    
-}
+    text-align: center;
+    font-size: 1.5em;
+    font-family: "Rubik Wet Paint", system-ui;
+  font-weight: 400;
+  font-style: normal;
+    font-variation-settings:
+      "EDPT" 100,
+      "EHLT" 12;
+    font-variation-settings:
+      "BLED" 0,
+      "SCAN" 0,
+      "XELA" 0,
+      "YELA" 0;
+    color: rgb(156, 88, 43);
+   
+  }
