--- a/src/app/modules/producto/pages/productos/productos.component.css
+++ b/src/app/modules/producto/pages/productos/productos.component.css
@@ -1,10 +1,25 @@
-h1 {
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
 
-color: linear-gradient(90deg, rgba(32,0,36,1) 0%, rgba(67,9,121,1) 44%, rgba(6,11,243,1) 80%, rgba(72,0,255,1) 100%);
-}
+  .title{
+    display: flex;
+    justify-content: center;
+    flex-grow: 4;
+    text-align: center;
+    font-size: 1.5em;
+    font-family: "Rubik Wet Paint", system-ui;
+  font-weight: 400;
+  font-style: normal;
+    font-variation-settings:
+      "EDPT" 100,
+      "EHLT" 12;
+    font-variation-settings:
+      "BLED" 0,
+      "SCAN" 0,
+      "XELA" 0,
+      "YELA" 0;
+    color: rgb(156, 88, 43);
+   
+  }
+
 
 app-carrusel{
   .container {
