--- a/src/app/modules/producto/pages/productos/productos.component.html
+++ b/src/app/modules/producto/pages/productos/productos.component.html
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="row">
-        <h1>productos</h1>
+           
+    <span class="title">
+    Productos
+    </span>
         <div class="col" >
             <app-carrusel></app-carrusel>
 
