--- a/src/app/modules/shared/components/navbar/navbar.component.css
+++ b/src/app/modules/shared/components/navbar/navbar.component.css
@@ -94,7 +94,7 @@ mat-toolbar {
     justify-content: center;
     text-align: center;
     font-size: 1.5em;
-    font-family: "Rubik Wet Paint", system-ui;
+    font-family: "Trade Winds", system-ui;
   font-weight: 400;
   font-style: normal;
     font-variation-settings:
