--- a/src/app/modules/producto/componentes/card-celular/card-celular.component.html
+++ b/src/app/modules/producto/componentes/card-celular/card-celular.component.html
@@ -1,25 +1,14 @@
-<!-- Card para mostrar TODOS los productos que se hayan ingresado -->
-<div class="row">
-    <div class="col-lg-12" *ngIf="compravisible">
-        <div class="col-lg-4">
-            <div class="card text-bg-info mb-3">
-                <ul class="list-group">
-                    <h3>Ultima Compra:</h3>
-                    <li class="list-group-item">
-                        {{notificacion}}
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
 
-    <div class="col" *ngFor="let producto of coleccionAuriculares">
+<!-- Card para mostrar TODOS los productos que se hayan ingresado -->
+ 
+<div class="row">
+    <div class="col" *ngFor="let producto of coleccionCelulares">
         <div class="card" style="width: 18rem;">
             <img src="{{producto.Imagen}}" class="card-img-top" alt="{{producto.Alt}}">
 
             <div class="card-body">
                 <h5 class="card-title">{{producto.Nombre}}</h5>
-                <p class="card-text">{{producto.Precio}}</p>
+                <p class="card-text">{{producto.Precio}}$</p>
 
                 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" 
                 data-bs-target="#modalCardAuriculares" (click)="mostrarVer(producto)">
@@ -53,7 +42,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Agregar al carrito</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" >Agregar al carrito</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             </div>
         </div>
