--- a/src/app/modules/shared/components/navbar/navbar.component.html
+++ b/src/app/modules/shared/components/navbar/navbar.component.html
@@ -38,7 +38,7 @@
     </mat-menu>
 
     <!-- Carrito -->
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <button mat-icon-button  routerLink="/carrito"  class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>shopping_cart</mat-icon>
     </button>
 
