--- a/src/app/modules/producto/componentes/cards/cards.component.html
+++ b/src/app/modules/producto/componentes/cards/cards.component.html
@@ -55,6 +55,7 @@
             </div>
 
             <div class="modal-footer">
+                <input type="number" placeholder="Cantidad deseada del producto" [(ngModel)]="Stock">
                 <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="agregarProducto(productoSeleccionado)">Agregar</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             </div>
